# Lidar_camera_projection

lidar_camera_bag_playback/: CMakeLists.txt  package.xml  show_color_pc.rviz
lidar_camera_bag_playback/config/: cameras.yaml
lidar_camera_bag_playback/launch/: lidar_camera_bag_playback.launch
lidar_camera_bag_playback/src/: lidar_camera_bag_playback.cpp
lidar_camera_projection/: CMakeLists.txt  package.xml
lidar_camera_projection/include/lidar_camera_projection/: colour_map.hpp  lidar_camera_node.hpp
lidar_camera_projection/launch/: LidarCameraProjection.launch
lidar_camera_projection/src/: lidar_camera_node.cpp
